--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
  <h1>Bienvenidos a Mi Proyecto</h1>
  <p>Este es mi primer archivo HTML gestionado con Git.</p>
+ <p>sert</p>
 </body>
 </html>
 
